--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "react-toastify": "^7.0.3",
     "web-vitals": "^1.1.1"
   },
